# mech-server

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: common_checks.yaml  release.yaml
docs/: index.md
mtd/: __init__.py  cli.py  context.py  deploy_mech.py  resources.py  setup_flow.py  workspace.py
mtd/abis/: __init__.py
mtd/commands/: __init__.py  add_tool_cmd.py  context_utils.py  deploy_mech_cmd.py  prepare_metadata_cmd.py  push_metadata_cmd.py  run_cmd.py  setup_cmd.py  stop_cmd.py  update_metadata_cmd.py
mtd/services/: __init__.py
mtd/services/metadata/: __init__.py  generate.py  publish.py  update_onchain.py
mtd/templates/: __init__.py  config.template  tool.template
mtd/templates/runtime/: __init__.py  config_mech_base.json  config_mech_gnosis.json  config_mech_optimism.json  config_mech_polygon.json  metadata.template.json
tests/: conftest.py
tests/unit/: test_context.py  test_deploy_mech.py  test_resources.py  test_setup_flow.py  test_workspace.py
tests/unit/cli/: test_add_tool_cmd.py  test_cli.py  test_context_utils.py  test_deploy_mech_cmd.py  test_prepare_metadata_cmd.py  test_push_metadata_cmd.py  test_run_cmd.py  test_setup_cmd.py  test_stop_cmd.py  test_update_metadata_cmd.py
tests/unit/services/: test_metadata_services.py  test_publish_validation.py  test_update_onchain.py
utils/: bump.py  check_dependencies.py  check_doc_ipfs_hashes.py  patch_multisend_web3_7.py
