[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "mech-server"
version = "0.8.1"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy[all]==0.21.19",
    "requests==2.32.5",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "hypothesis==6.21.6",
    "open-aea-test-autonomy==0.21.19",
    "web3<8,>=7.0.0",
    "open-aea-cli-ipfs==2.2.1",
    "pytest-asyncio==1.3.0",
    "aiohttp<4.0.0,>=3.8.5",
    "certifi==2026.2.25",
    "multidict==6.7.1",
    "ecdsa>=0.15",
    "py-ecc<10,>=8",
    "websocket_client<1,>=0.32.0",
    "pytest==8.4.2",
    "openapi-core==0.22.0",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "click==8.1.8",
    "mech-client==0.20.0",
    "olas-operate-middleware>=0.15.2",
    "safe-eth-py>=7.18.0,<8",
    "mkdocs>=1.6.1,<2",
    "PyYAML==6.0.1",
    "prometheus_client==0.23.1",
    "pebble==5.1.3",
    "pyyaml<7.0.0,>=6.0.0",
    "open-aea-helpers==0.21.19",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/mech-server"

[project.scripts]
mech = "mtd.cli:cli"

[dependency-groups]
dev = [
    "setuptools>=77.0.3,<78",
    "mkdocs-material>=9.6.17,<10",
    "mkdocs-macros-plugin>=1.3.9,<2",
    "tomte==0.6.5",
    "pytest-cov>=7.0.0,<8",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = ["mtd", "packages"]
module-root = ""
