[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "mech-server"
version = "0.8.1"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[all]==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-helpers==0.21.19",
    # Framework/lib deps — ranges (mech-family = "mech repos", not apps).
    "requests>=2.32.5",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "hypothesis>=6",
    "web3<8,>=7.0.0",
    "pytest-asyncio>=1.3",
    "aiohttp<4.0.0,>=3.8.5",
    "certifi",
    "multidict",
    "ecdsa>=0.15",
    "py-ecc<10,>=8",
    "websocket_client<1,>=0.32.0",
    "pytest>=8,<10",
    "openapi-core<0.23,>=0.22",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "click<9,>=8.1",
    "PyYAML>=6",
    "prometheus_client>=0.23.1,<0.24",
    "pebble>=5.1,<5.2",
    "python-dotenv",
    # flask needed at runtime by operate.services.utils.tendermint; was
    # pulled transitively before, but the range-ify widened paths and
    # the resolver now picks an olas-operate-middleware path without
    # flask. Declare explicitly.
    "flask>=3.1,<4",
    # mech-server-specific deps (CLI + middleware).
    "mech-client>=0.20,<0.21",
    "olas-operate-middleware>=0.15.2,<0.16",
    "safe-eth-py>=7.18.0,<8",
    "mkdocs>=1.6.1,<2",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/mech-server"

[project.scripts]
mech = "mtd.cli:cli"

[dependency-groups]
dev = [
    "setuptools>=77.0.3,<78",
    "mkdocs-material>=9.6.17,<10",
    "mkdocs-macros-plugin>=1.3.9,<2",
    "tomte==0.6.5",
    "pytest-cov>=7.0.0,<8",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = ["mtd", "packages"]
module-root = ""
